--- a/html/add_task.html
+++ b/html/add_task.html
@@ -10,7 +10,7 @@
         <script src="/js/addTask.js"></script>
     </head>
 
-    <body>
+    <body onload="showSuccessMessage()">
         <h1>Add Task</h1>
         <form id="content-box-container" onsubmit="createTask(event)">
             <div style="display: flex">
