--- a/html/add_task.html
+++ b/html/add_task.html
@@ -46,9 +46,9 @@
                     <div id="prio-container" class="flex-column">
                         <div class="subtitle">Prio</div>
                         <div id="choose-prio-container">
-                            <button class="choose-prio-button flex-center-align" id="prio-high-button" type="button" onclick="choosePrio('high')">
-                                <span id="prio-high" class="flex-center-align">Urgent </span>
-                                <svg class="prio-high-arrows" id="prio-high-arrows" width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <button class="choose-prio-button flex-center-align" id="prio-urgent-button" type="button" onclick="choosePrio('urgent')">
+                                <span id="prio-urgent" class="flex-center-align">Urgent </span>
+                                <svg class="prio-urgent-arrows" id="prio-urgent-arrows" width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M19.6528 15.2547C19.4182 15.2551 19.1896 15.1803 19.0007 15.0412L10.7487 8.958L2.49663 15.0412C2.38078 15.1267 2.24919 15.1887 2.10939 15.2234C1.96959 15.2582 1.82431 15.2651 1.68184 15.2437C1.53937 15.2223 1.40251 15.1732 1.27906 15.099C1.15562 15.0247 1.04801 14.927 0.96238 14.8112C0.876751 14.6954 0.814779 14.5639 0.780002 14.4243C0.745226 14.2846 0.738325 14.1394 0.759696 13.997C0.802855 13.7095 0.958545 13.4509 1.19252 13.2781L10.0966 6.70761C10.2853 6.56802 10.5139 6.49268 10.7487 6.49268C10.9835 6.49268 11.212 6.56802 11.4007 6.70761L20.3048 13.2781C20.4908 13.415 20.6286 13.6071 20.6988 13.827C20.7689 14.0469 20.7678 14.2833 20.6955 14.5025C20.6232 14.7216 20.4834 14.9124 20.2962 15.0475C20.1089 15.1826 19.8837 15.2551 19.6528 15.2547Z"
                                         fill="currentColor"
@@ -128,7 +128,7 @@
         </div>
         <script>
             document.addEventListener("DOMContentLoaded", () => {
-                includeHTML(); // Rufe die includeHTML Funktion nach dem Laden des DOMs auf
+                includeHTML();
             });
         </script>
     </body>
