--- a/html/add_task.html
+++ b/html/add_task.html
@@ -105,6 +105,7 @@
                             <input type="text" id="new-subtask-input" placeholder="Add new subtask" />
                             <div id="addicon-container" onclick="addSubtask()"><img src="/img/addTask/add.png" id="add-icon" alt="add-icon" /></div>
                         </div>
+                        <span id="missing-subtask-message" class="validationStyleSubtasks d-none">This field is required</span>
                         <ul id="subtask-list"></ul>
                     </div>
                 </div>
