added error handling for deadline=undefined/NaN

--- a/html/summary_user.html
+++ b/html/summary_user.html
@@ -74,7 +74,7 @@
                         <div id="mainContentLine2Middle"></div>
                         <div id="mainContentLine2Right">
                             <div id="deadline"> </div>                                                              <!-- HTML-Template -->
-                            <span id="upcoming">Upcoming Deadline</span>
+                            <div id="upcoming"> </div>                                                              <!-- HTML-Template -->
                         </div>
                     </a>
                     <div id="mainContentLine3">
