links to legal docs modified to be opened in a new tab

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         </div>
 
         <div class="terms">
-            <a href="./html/legal matters/privacypolicy.html" class="terms-link">Privacy Policy</a>
-            <a href="./html/legal matters/legalnotice.html" class="terms-link">Legal Notice</a>
+            <a  href="./html/legal matters/privacypolicy.html" target="_blank" rel="noopener noreferrer" class="terms-link">Privacy Policy</a>
+            <a href="./html/legal matters/legalnotice.html" target="_blank" rel="noopener noreferrer" class="terms-link">Legal Notice</a>
         </div>
     </div>    
 
