--- a/html/addTask.html
+++ b/html/addTask.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="/img/JoinIcon.png" />
         <link rel="stylesheet" href="/css/addTask.css" />
         <link rel="stylesheet" href="/css/fonts.css" />
-        <link rel="stylesheet" type="text/css" href="../css/header_and_sidebar.css" />
+        <link rel="stylesheet" href="/board/header_and_sidebar.css" />
     </head>
     <body>
         <div includeHTML="../html/header_and_sidebar.html"></div>
