adjusted legal links

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <label for="privacy-policy">
                         <input class="input-checkbox" type="checkbox" id="privacy-policy">
                         <span class="custom-checkbox"></span>
-                        I accept the<a class="privacy-policy-link" href="#">Privacy Policy</a>
+                        I accept the<a class="privacy-policy-link" href="./html/legal matters/privacypolicy.html?fromLogin=true">Privacy Policy</a>
                     </label>
                 </div>
 
@@ -89,8 +89,8 @@
         </div>
 
         <div class="terms">
-            <a  href="./html/legal matters/privacypolicy.html" target="_blank" rel="noopener noreferrer" class="terms-link">Privacy Policy</a>
-            <a href="./html/legal matters/legalnotice.html" target="_blank" rel="noopener noreferrer" class="terms-link">Legal Notice</a>
+            <a href="./html/legal matters/privacypolicy.html?fromLogin=true" target="_blank" rel="noopener noreferrer" class="terms-link">Privacy Policy</a>
+            <a href="./html/legal matters/legalnotice.html?fromLogin=true" target="_blank" rel="noopener noreferrer" class="terms-link">Legal Notice</a>
         </div>
     </div>    
 
