--- a/html/help.html
+++ b/html/help.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="/img/JoinIcon.png">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/css/fonts.css">
-    <link rel="stylesheet" href="/board/header_and_sidebar.css">
+    <link rel="stylesheet" href="/css/header.css">
     
 </head>
 <body>
-    <div includeHTML="/html/header_and_sidebar.html"></div>
+    <div includeHTML="/html/header.html"></div>
 
     <div class="legal-text-container">
         <div class="header-legal">
@@ -75,11 +75,10 @@
     </div>
 
     <script src="/js/utils.js"></script>
-    <script src="/board/header_and_sidebar_script.js"></script>
-    <script src="/js/hover_effekt_contacts.js"></script>
+    <script src="/js/header.js"></script>
      <script>
      document.addEventListener("DOMContentLoaded", () => {
-            includeHTML();  // Rufe die includeHTML Funktion nach dem Laden des DOMs auf
+            includeHTML();
         });
     </script>
     
