changed file path to summary.html in line 33

--- a/html/header.html
+++ b/html/header.html
@@ -30,10 +30,10 @@
 <div class="sideBar">
     <div class="imgWrapper"><img src="/img/icons/logo.svg" alt=""></div>
     <div class="sideBarMenu">
-        <a href="/html/summary_user.html" id="summary" class="sideBarMenuButtons"><img src="/img/icons/summaryIcon.png" alt=""> Summary</a>     <!-- removed onclick-function and changed href + img src-->
-        <a href="/html/addTask.html" id="addTask" class="sideBarMenuButtons"><img src="/img/icons/edit_square.png" alt=""> Add Task</a>        <!-- removed onclick-function and changed href + img src-->
+        <a href="/html/summary.html" id="summary" class="sideBarMenuButtons"><img src="/img/icons/summaryIcon.png" alt=""> Summary</a>     <!-- removed onclick-function and changed href + img src-->
+        <a href="/html/addTask.html" id="addTask" class="sideBarMenuButtons"><img src="/img/icons/edit_square.png" alt=""> Add Task</a>         <!-- removed onclick-function and changed href + img src-->
         <a href="/html/board.html" id="board" class="sideBarMenuButtons"><img src="/img/icons/boardIcon.png" alt=""> Board</a>                  <!-- removed onclick-function and changed href + img src-->
-        <a href="/html/contacts.html" id="contactsID" class="sideBarMenuButtons"><img src="/img/icons/contactsIcon.png" alt=""> Contacts</a>      <!-- removed onclick-function and changed href + img src-->
+        <a href="/html/contacts.html" id="contactsID" class="sideBarMenuButtons"><img src="/img/icons/contactsIcon.png" alt=""> Contacts</a>    <!-- removed onclick-function and changed href + img src-->
     </div>
     <div class="sideBarPolicyAndNotice">
         <a href="/html/legal matters/privacypolicy.html" id="privacyPolicy" class="policyHref"  target="_blank" rel="noopener noreferrer">Privacy Policy</a>                                 <!-- changed href -->
