--- a/html/addTask.html
+++ b/html/addTask.html
@@ -7,13 +7,12 @@
         <link rel="icon" href="/img/JoinIcon.png" />
         <link rel="stylesheet" href="/css/addTask.css" />
         <link rel="stylesheet" href="/css/fonts.css" />
-        <!-- <link rel="stylesheet" href="/board/header_and_sidebar.css" /> -->
         <link rel="stylesheet" href="/css/header.css" />
     </head>
     <body>
-        <div includeHTML="../html/header_and_sidebar.html"></div>
-        <div id="h1-container"><h1>Add Task</h1></div>
+        <div includeHTML="/html/header.html"></div>
         <div id="content-box-container">
+            <h1>Add Task</h1>
             <div style="display: flex" class="responsive-container">
                 <div id="content-box-left" class="flex-column">
                     <div id="title-container" class="flex-column">
@@ -135,8 +134,8 @@
                 includeHTML();
             });
         </script>
-        <script src="/js/addTask.js"></script>
-        <script src="/js/logout.js"></script>
         <script src="/js/header.js"></script>
+        <script src="/js/logout.js"></script>
+        <script src="/js/addTask.js"></script>
     </body>
 </html>
