modified for landscape mode

--- a/html/header.html
+++ b/html/header.html
@@ -40,3 +40,7 @@
         <a href="/html/legal matters/legalnotice.html" id="legalNotice" class="noticeHref"  target="_blank" rel="noopener noreferrer">Legal notice</a>                                       <!-- changed href -->
     </div>
 </div>
+
+<div id="landscape-warning">
+    <h2>Please rotate your device</h2>
+</div>
