--- a/html/addTask.html
+++ b/html/addTask.html
@@ -15,16 +15,16 @@
             <h1>Add Task</h1>
             <div style="display: flex" class="responsive-container">
                 <div id="content-box-left" class="flex-column">
-                    <div id="title-container" class="flex-column">
+                    <div id="title-container" class="flex-column gap8px">
                         <div class="subtitle">Title<span class="asterisk">*</span></div>
                         <div id="title-input-container"><input type="text" placeholder="Enter a title" id="title-input" /></div>
                         <span id="missing-title-message" class="validationStyle d-none">This field is required</span>
                     </div>
-                    <div id="description-container" class="flex-column">
+                    <div id="description-container" class="flex-column gap8px">
                         <div class="subtitle">Description</div>
                         <div id="textarea-container" class="flex-column"><textarea placeholder="Enter a Description" id="textarea-input"></textarea></div>
                     </div>
-                    <div id="assigned-container" class="flex-column">
+                    <div id="assigned-container" class="flex-column gap8px">
                         <div class="subtitle">Assigned to</div>
                         <div id="selected-name" class="select-container" onclick="checkIfContactsDropdownIsVisible()">
                             <span id="assigned-placeholder">Select contacts to assign</span>
@@ -36,12 +36,12 @@
                 </div>
                 <div id="border-container"></div>
                 <div id="content-box-right" class="flex-column">
-                    <div id="date-container" class="flex-column">
+                    <div id="date-container" class="flex-column gap8px">
                         <div class="subtitle">Due date<span class="asterisk">*</span></div>
                         <div id="calender"><input type="date" id="date-input" /></div>
                         <span id="missing-date-message" class="validationStyle d-none">This field is required</span>
                     </div>
-                    <div id="prio-container" class="flex-column">
+                    <div id="prio-container" class="flex-column gap8px">
                         <div class="subtitle">Prio</div>
                         <div id="choose-prio-container">
                             <button class="choose-prio-button flex-center-align" id="prio-urgent-button" type="button" onclick="choosePrio('urgent')">
@@ -89,7 +89,7 @@
                             </button>
                         </div>
                     </div>
-                    <div id="category-container" class="flex-column">
+                    <div id="category-container" class="flex-column gap8px">
                         <div class="subtitle">Category<span class="asterisk">*</span></div>
                         <div id="selected-category" class="select-container" onclick="checkIfCategoryDropdownIsVisible(), doNotCloseDropdown(event)">
                             <span id="category-placeholder">Select task category</span>
@@ -98,10 +98,10 @@
                         <span id="missing-category-message" class="validationStyle d-none">This field is required</span>
                         <div id="category-dropdown-list" class="d-none"></div>
                     </div>
-                    <div id="substasks-container" class="flex-column">
+                    <div id="substasks-container" class="flex-column gap8px">
                         <div class="subtitle">Subtasks</div>
                         <div id="subtask-relative-container">
-                            <div id="new-subtask-contaier" onclick="addOrCloseSubtask()">
+                            <div id="new-subtask-container" onclick="addOrCloseSubtask()">
                                 <input type="text" id="new-subtask-input" placeholder="Add new subtask" />
                                 <div id="subtask-icon-container">
                                     <div id="plus-icon-container" class="circleHoverEffect"><img src="/img/addTask/add.png" id="plus-icon" alt="plus-icon" /></div>
