--- a/html/addTask.html
+++ b/html/addTask.html
@@ -117,6 +117,12 @@
                     <div id="new-subtask-list-container"><div id="generated-subtask-list-container"></div></div>
                 </div>
             </div>
+            <div id="success-message-container" class="style-effects-success-message-container">
+                <div id="success-message">
+                    <p>Task added to board</p>
+                    <img src="/img/addTask/Icons.png" alt="success" id="succes-img" />
+                </div>
+            </div>
         </div>
         <div id="interactives-buttons-and-required-container">
             <div id="required-container">
@@ -127,21 +133,14 @@
                 <button id="create-button" class="flex-center-align" type="button" onclick="createTask()"><span id="create-task-button-font" class="contents">Create Task</span><img src="/img/summary/check.png" id="check-icon" /></button>
             </div>
         </div>
-        <div id="success-message-container" class="style-effects-success-message-container">
-            <div id="success-message" class="hidden-overlay">
-                <p>Task added to board</p>
-                <img src="/img/addTask/Icons.png" alt="success" />
-            </div>
-        </div>
 
         <script>
             document.addEventListener("DOMContentLoaded", () => {
                 includeHTML();
             });
         </script>
-        <script src="/js/addTask3.js"></script>
-        <script src="/js/addTaskContactsFunctions.js"></script>
-        <script src="/js/addTaskValidateAndClearingFunctions.js"></script>
+        <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
+        <script src="/js/addTaskValidationAndClearingFunctions.js"></script>
         <script src="/js/addTaskCategoryFunctions.js"></script>
         <script src="/js/header.js"></script>
         <script src="/js/logout.js"></script>
