--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -25,7 +25,8 @@
                     </div>
                 </div>
                 <button class="create-task-from-board" onclick="createTaskFromBoard()">
-                    Add Task<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <span>Add Task</span>
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.66602 11.3327H0.666016V8.66602H8.66602V0.666016H11.3327V8.66602H19.3327V11.3327H11.3327V19.3327H8.66602V11.3327Z" fill="white" />
                     </svg>
                 </button>
@@ -87,21 +88,24 @@
 
         <div id="taskDetails"></div>
 
+        <div id="success-message-container" class="style-effects-success-message-container">
+            <div id="success-message">
+                <p>Task added to board</p>
+                <img src="/img/addTask/Icons.png" alt="success" id="succes-img" />
+            </div>
+        </div>   
+
+        <script src="/boardTest/config.js"></script>
         <script src="/js/utils.js"></script>
         <script src="/js/header.js"></script>
-        <script src="/js/logout.js"></script>
-        <script src="/boardTest/boardHTML.js"></script>
-        <!-- <script src="/js/addTask.js"></script>
-    <script src="/js/addTaskCategoryFunctions.js"></script>
-    <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
-    <script src="/js/addTaskValidationAndClearingFunctions.js"></script> -->
+        <script src="/js/logout.js"></script>    
+        <script src="/boardTest/boardHTML.js"></script>    
         <script src="/boardTest/boardUI.js"></script>
         <script src="/boardTest/boardHandling.js"></script>
-        <script src="/boardTest/board2.js"></script>
-        <script src="/boardTest/boardEditTask.js"></script>
-        <script src="/js/addTask.js"></script>
-        <script src="/js/addTaskCategoryFunctions.js"></script>
+        <script src="/boardTest/board2.js"></script>   
+        <!-- <script src="/js/addTask.js"></script> -->
+        <!-- <script src="/js/addTaskCategoryFunctions.js"></script>
         <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
-        <script src="/js/addTaskValidationAndClearingFunctions.js"></script>
+        <script src="/js/addTaskValidationAndClearingFunctions.js"></script> -->
     </body>
 </html>
