--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -93,18 +93,18 @@
                 <p>Task added to board</p>
                 <img src="/img/addTask/Icons.png" alt="success" id="succes-img" />
             </div>
-        </div>   
+        </div>
 
         <script src="/boardTest/config.js"></script>
         <script src="/js/utils.js"></script>
         <script src="/js/header.js"></script>
-        <script src="/js/logout.js"></script>    
-        <script src="/boardTest/boardHTML.js"></script>    
+        <script src="/js/logout.js"></script>
+        <script src="/boardTest/boardHTML.js"></script>
         <script src="/boardTest/boardUI.js"></script>
         <script src="/boardTest/boardHandling.js"></script>
-        <script src="/boardTest/board2.js"></script>   
-        <!-- <script src="/js/addTask.js"></script> -->
-        <!-- <script src="/js/addTaskCategoryFunctions.js"></script>
+        <script src="/boardTest/board2.js"></script>
+        <!-- <script src="/js/addTask.js"></script>
+        <script src="/js/addTaskCategoryFunctions.js"></script>
         <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
         <script src="/js/addTaskValidationAndClearingFunctions.js"></script> -->
     </body>
