--- a/html/addTask.html
+++ b/html/addTask.html
@@ -145,5 +145,6 @@
         <script src="/js/header.js"></script>
         <script src="/js/logout.js"></script>
         <script src="/js/addTask.js"></script>
+        <script src="/boardTest/config.js"></script>
     </body>
 </html>
