added editTask div

--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -88,6 +88,8 @@
 
         <div id="taskDetails"></div>
 
+        <div id="editTask"></div>
+
         <div id="success-message-container" class="style-effects-success-message-container">
             <div id="success-message">
                 <p>Task added to board</p>
