--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -105,6 +105,8 @@
         <script src="/boardTest/boardHTML.js"></script>
         <script src="/boardTest/boardUI.js"></script>
         <script src="/boardTest/boardHandling.js"></script>
+        <script src="/boardTest/boardAddTask.js"></script>
+        <script src="/boardTest/boardEditTask.js"></script>
         <!-- <script src="/js/addTask.js"></script>
         <script src="/js/addTaskCategoryFunctions.js"></script>
         <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
