subtasks layout in editTask angepasst

--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -18,7 +18,7 @@
             <h2 class="h1-board">Board</h2>
             <div class="search-section">
                 <div class="search-field">
-                    <input type="text" class="search-input" placeholder="Find Task" />
+                    <input type="text" class="search-input" id="search-input-id" placeholder="Find Task" />
                     <div class="search-icons">
                         <div class="separator-line"></div>
                         <button class="search"><img src="/img/search.png" alt="search" /></button>
