--- a/html/addTask.html
+++ b/html/addTask.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div id="border-container"></div>
-            <div id="content-box-right" class="flex-column">
+            <div id="edit-content-box-right" class="flex-column">
                 <div id="date-container" class="flex-column gap8px">
                     <div class="subtitle">Due date<span class="asterisk">*</span></div>
                     <div id="calender">
