--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -102,9 +102,9 @@
         <script src="/boardTest/boardHandling.js"></script>
         <script src="/boardTest/boardAddTask.js"></script>
         <script src="/boardTest/boardEditTask.js"></script>
-        <!-- <script src="/js/addTask.js"></script>
+        <script src="/js/addTask.js"></script>
         <script src="/js/addTaskCategoryFunctions.js"></script>
         <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
-        <script src="/js/addTaskValidationAndClearingFunctions.js"></script> -->
+        <script src="/js/addTaskValidationAndClearingFunctions.js"></script>
     </body>
 </html>
