--- a/html/addTask.html
+++ b/html/addTask.html
@@ -18,7 +18,7 @@
                     <div class="subtitle">Title<span class="asterisk">*</span></div>
                     <div id="title-input-container">
                         <input type="text" placeholder="Enter a title" id="title-input" />
-                        <span id="missing-title-message" class="validationStyle" style="display: none">This field is required</span>
+                        <span id="missing-title-message" style="display: none">This field is required</span>
                     </div>
                 </div>
                 <div id="description-container" class="flex-column gap8px">
@@ -41,7 +41,7 @@
                     <div class="subtitle">Due date<span class="asterisk">*</span></div>
                     <div id="calender">
                         <input type="date" id="date-input" />
-                        <span id="missing-date-message" class="validationStyle" style="display: none">This field is required</span>
+                        <span id="missing-date-message" style="display: none">This field is required</span>
                     </div>
                 </div>
                 <div id="prio-container" class="flex-column gap8px">
@@ -100,7 +100,7 @@
                             <img src="/img/addTask/arrow_drop_down.svg" id="dropdown-arrow" />
                         </div>
                     </div>
-                    <span id="missing-category-message" class="validationStyle" style="display: none">This field is required</span>
+                    <span id="missing-category-message" style="display: none">This field is required</span>
                     <div id="category-dropdown-list" class="d-none"></div>
                 </div>
                 <div id="substasks-container" class="flex-column gap8px">
@@ -112,7 +112,7 @@
                                 <div id="plus-icon-container" class="circleHoverEffect"><img src="/img/addTask/add.png" id="plus-icon" alt="plus-icon" /></div>
                             </div>
                         </div>
-                        <span id="missing-subtask-message" class="validationStyleSubtasks" style="display: none">Please add a subtask 🙂</span>
+                        <span id="missing-subtask-message" style="display: none">Please add a subtask 🙂</span>
                     </div>
                     <div id="new-subtask-list-container"><div id="generated-subtask-list-container"></div></div>
                 </div>
@@ -137,6 +137,7 @@
         <script>
             document.addEventListener("DOMContentLoaded", () => {
                 includeHTML();
+                checkAddTaskChanges();
             });
         </script>
         <script src="/js/addTaskContactsAndUserActionsFunctions.js"></script>
