adjusted error message

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <input id="loginPassword" class="input-log-in" type="password" placeholder="Password" required>
                     <img src="./img/lock.png" alt="password icon" class="icon">
                 </div>
+                <div id="confirmLoginError" class="error-message"></div>
 
                 <div class="checkbox">
                     <label for="rememberMe">
