--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+/+*<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -15,16 +15,28 @@
         <div includeHTML="/html/header.html"></div>
 
         <div class="board-header">
-            <h2 class="h1-board">Board</h2>
-            <div class="search-section">
-                <div class="search-field">
-                    <input type="text" class="search-input" id="search-input-id" placeholder="Find Task" />
-                    <div class="search-icons">
-                        <div class="separator-line"></div>
-                        <button class="search"><img src="/img/search.png" alt="search" /></button>
+            <div class="board-header-left">
+                <div class="board-header-left-top">
+                <h2 class="h1-board">Board</h2>
+                <button id="hidden-button-desktop" class="create-task-from-board" onclick="createTaskFromBoard()">
+                    <span>Add Task</span>
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.66602 11.3327H0.666016V8.66602H8.66602V0.666016H11.3327V8.66602H19.3327V11.3327H11.3327V19.3327H8.66602V11.3327Z" fill="white" />
+                    </svg>
+                </button>
+                </div>
+                <div class="search-section">
+                    <div class="search-field">
+                        <input type="text" class="search-input" id="search-input-id" placeholder="Find Task" />
+                        <div class="search-icons">
+                            <div class="separator-line"></div>
+                            <button class="search"><img src="/img/search.png" alt="search" /></button>
+                        </div>
                     </div>
                 </div>
-                <button class="create-task-from-board" onclick="createTaskFromBoard()">
+            </div>
+            <div class="board-header-right">
+                <button id="hidden-button-mobile" class="create-task-from-board" onclick="createTaskFromBoard()">
                     <span>Add Task</span>
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.66602 11.3327H0.666016V8.66602H8.66602V0.666016H11.3327V8.66602H19.3327V11.3327H11.3327V19.3327H8.66602V11.3327Z" fill="white" />
