updated folder structure by removing old/unused files

--- a/html/header_and_sidebar.html
+++ b/html/header_and_sidebar.html
@@ -20,7 +20,7 @@
 <div class="sideBar">
     <div class="imgWrapper"><img src="../img/icons/logo.svg" alt=""></div>
     <div class="sideBarMenu">
-        <a href="summary_user.html" id="summary" class="sideBarMenuButtons"><img src="../img/icons/summaryIcon.png" alt=""> Summary</a>     <!-- removed onclick-function and changed href + img src-->
+        <a href="summary.html" id="summary" class="sideBarMenuButtons"><img src="../img/icons/summaryIcon.png" alt=""> Summary</a>     <!-- removed onclick-function and changed href + img src-->
         <a href="add_task.html" id="addTask" class="sideBarMenuButtons"><img src="../img/icons/edit_square.png" alt=""> Add Task</a>        <!-- removed onclick-function and changed href + img src-->
         <a href="board.html" id="board" class="sideBarMenuButtons"><img src="../img/icons/boardIcon.png" alt=""> Board</a>                  <!-- removed onclick-function and changed href + img src-->
         <a href="contacts.html" id="contacts" class="sideBarMenuButtons"><img src="../img/icons/contactsIcon.png" alt=""> Contacts</a>      <!-- removed onclick-function and changed href + img src-->
