--- a/html/summary.html
+++ b/html/summary.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/summary/join_logo_summary.png">
-    <title>Join - Summary</title>
+    <link rel="icon" href="../img/Logo for Favicon construction.png">
+    <title>Join - Summary User</title>
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" type="text/css" href="../css/summary.css">
     <link rel="stylesheet" type="text/css" href="../css/summaryResponsive.css">
