--- a/html/addTask.html
+++ b/html/addTask.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Join</title>
-        <link rel="icon" href="/img/JoinIcon.png" />
+        <title>Join Tasks</title>
+        <link rel="icon" href="/img/Logo for Favicon construction.png" />
         <link rel="stylesheet" href="/css/addTask.css" />
         <link rel="stylesheet" href="/css/fonts.css" />
         <link rel="stylesheet" href="/css/header.css" />
@@ -146,7 +146,6 @@
         <script src="/js/header.js"></script>
         <script src="/js/logout.js"></script>
         <script src="/js/addTask.js"></script>
-        <script src="/js/addTaskSubtasks.js"></script>
         <script src="/boardTest/config.js"></script>
     </body>
 </html>
