shortened the files and functions

--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -129,5 +129,7 @@
         <script src="/boardTest/boardAddTaskSubtasks.js"></script>
         <script src="/boardTest/boardAddTaskClearingFunctions.js"></script>
         <script src="/boardTest/boardAddTaskValidationFunctions.js"></script>
+        <script src="/boardTest/boardEditTaskValidateInputs.js"></script>
+        
     </body>
 </html>
