shortened functions and files

--- a/boardTest/board2.html
+++ b/boardTest/board2.html
@@ -130,6 +130,7 @@
         <script src="/boardTest/boardAddTaskClearingFunctions.js"></script>
         <script src="/boardTest/boardAddTaskValidationFunctions.js"></script>
         <script src="/boardTest/boardEditTaskValidateInputs.js"></script>
+        <script src="/boardTest/boardUIAdvanced.js"></script>
         
     </body>
 </html>
